# best-haskell

./: .gitignore  .slugignore  Procfile  best-haskell.cabal  bower.json  package.json  register-cabal.hs
deploy/: files
libs/: libgmp.so.10
register/: register-downloads.js  register-index.js  register-maintainers.js
scripts/: daily.sh  deploy.sh  execute.sh
src/: Tar.hs  best-haskell.hs  index2json.hs  register-downloads.hs
static/: index.html  main.css  main.html  main.js
static/view/: 3tables.html  categories.html  category.html  detail.html  index.html  licenses.html  loadingContents.html  maintainers.html  package.html  paginate.html  rankingTable.html  rankingTables.html  search.html  subIndex.html
