name:                best-haskell
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  Procfile
                   , package.json
                   , ./scripts/execute.sh
cabal-version:       >=1.10

library
  exposed-modules:     Tar, Common
  build-depends:       base                 >=4.6  && <4.8
                     , process              >=1.2  && <1.3
                     , text                 >=1.1  && <1.2
                     , conduit              >=1.1  && <1.2
                     , conduit-extra        >=1.1  && <1.2
                     , binary               >=0.7  && <0.8
                     , bytestring           >=0.10 && <0.11
                     , bson                 >=0.3  && <0.4
                     , aeson                >=0.7  && <0.9
  hs-source-dirs:      library
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable best-haskell
  main-is:             src/best-haskell.hs
  -- other-modules:       
  build-depends:       base                 >=4.6  && <4.8
                     , warp                 >=3.0  && <3.1
                     , apiary               >=0.17 && <0.18
                     , apiary-mongodb       >=0.17 && <0.18
                     , time                 >=1.4  && <1.5
                     , monad-control        >=0.3  && <0.4
                     , process              >=1.2  && <1.3
                     , text                 >=1.1  && <1.2
                     , bytestring           >=0.10 && <0.11
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010

executable index2json
  main-is:             src/index2json.hs
  build-depends:       base                 >=4.6  && <4.8
                     , best-haskell
                     , mtl                  >=2.2  && <2.3
                     , resourcet            >=1.1  && <1.2
                     , Cabal                >=1.20 && <1.21
                     , aeson                >=0.7  && <0.9
                     , conduit              >=1.1  && <1.2
                     , conduit-extra        >=1.1  && <1.2
                     , bytestring           >=0.10 && <0.11
                     , text                 >=1.1  && <1.2
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
