name:                best-haskell
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  Procfile
                   , package.json
                   , ./scripts/execute.sh
cabal-version:       >=1.10

executable best-haskell
  main-is:             src/best-haskell.hs
  -- other-modules:       
  build-depends:       base                 >=4.6    && <4.8
                     , warp                 >=3.0    && <3.1
                     , wai-extra            >=3.0    && <3.1
                     , apiary               >=1.1.1  && <1.2
                     , apiary-mongoDB       >=1.1    && <1.2
                     , apiary-memcached     >=1.1    && <1.2
                     , apiary-helics        >=1.1    && <1.2
                     , memcached-binary     >=0.1    && <0.3
                     , time                 >=1.4    && <1.5
                     , monad-control        >=0.3    && <0.4
                     , process              >=1.2    && <1.3
                     , text                 >=1.1    && <1.2
                     , bytestring           >=0.10   && <0.11
                     , binary               >=0.7    && <0.8
                     , aeson                >=0.7    && <0.9
                     , abeson               >=0.1    && <0.2
                     , filepath             >=1.3    && <1.4
                     , lifted-base          >=0.2    && <0.3
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010

executable index2json
  main-is:             index2json.hs
  build-depends:       base                 >=4.6  && <4.8
                     , mtl                  >=2.1  && <2.3
                     , resourcet            >=1.1  && <1.2
                     , Cabal                >=1.20 && <1.21
                     , aeson                >=0.7  && <0.9
                     , conduit              >=1.1  && <1.2
                     , conduit-extra        >=1.1  && <1.2
                     , bytestring           >=0.10 && <0.11
                     , text                 >=1.1  && <1.2
                     , binary               >=0.7  && <0.8
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010
